Multiboot assembler code updated to provide concrete OS image mapping. Streams code updated to extract string printing features to a separate class.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -10,7 +10,8 @@ OBJECTS = \
    i386/boot.o \
    i386/bootterm.o \
    i386/entry.o \
-   cpp-runtime.o
+   cpp-runtime.o \
+   streams.o
 
 all: $(IMG)
 
