--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,17 +1,19 @@
 CFLAGS = -I. -I../include -fno-builtin -nostdinc -O -g -Wall -m32
 CXXFLAGS = $(CFLAGS) -nostdlib -fno-rtti -nostartfiles -fno-exceptions
 
-LDFLAGS = -nostdlib -Wl,-N -Wl,-Ttext -Wl,100000 --format -m32
-LXXFLAGS = -nostdlib -Wl,-N -Wl,-Ttext -Wl,100000 --format -m32
+LDFLAGS = -nostdlib -Wl,-N -Wl,-T -Wl,kernel.ld --format -m32
 
 IMG = alderaan.img
+LINK_MAP = kernel.ld
 
 OBJECTS = \
    i386/boot.o \
    i386/bootterm.o \
    i386/entry.o \
-   cpp-runtime.o \
-   streams.o
+   i386/io.o \
+   runtime.o \
+   streams.o \
+   mem-utils.o
 
 all: $(IMG)
 
@@ -21,8 +23,8 @@ i386/boot.o: i386/boot.S i386/multiboot.h
 %.o: %.cpp %.h
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-$(IMG): $(OBJECTS)
-	$(CXX) $(LXXFLAGS) $(OBJECTS) -o $(IMG)
+$(IMG): $(OBJECTS) $(LINK_MAP)
+	$(CXX) $(LDFLAGS) $(OBJECTS) -o $(IMG)
 
 install-floppy: floppy.img $(IMG)
 	sudo mount -o loop floppy.img /mnt
